# API/src/yeti_api.py
@@ -3,14 +3,61 @@ import json
 from boto3.dynamodb.conditions import Key
 from botocore.exceptions import ClientError
 
-import src.api_response as api_response
-from src.dynamodb import transactions_table
-from src.utils import replace_decimals
-from src.auth import Authorizer
-import src.constants as constants
+import api_response as api_response
+from dynamodb import transactions_table
+from utils import replace_decimals
+from auth import Authorizer, OutlookAuthorizer
+import constants as constants
+import outlook_service
+import re
 
 logger = logging.getLogger()
 logger.setLevel(logging.INFO)
+
+
+def login_outlook_oauth(event, context):
+    try:
+        body = json.loads(event['body'])
+    except (KeyError, TypeError, ValueError):  # By default Lambda sets the body to None if it's left empty -> TypeError
+        return api_response.client_error("Cannot parse request body to JSON object. ")
+
+    try:
+        auth_code = body['authCode']
+    except KeyError:
+        return api_response.client_error("Cannot read property 'authCode' from the request body. ")
+
+    auth_verify_result = OutlookAuthorizer.outlook_oauth(auth_code)
+
+    if not auth_verify_result:
+        return api_response.internal_error("An error occurred authenticating user login request. Failed to retrieve auth verification result")
+    elif auth_verify_result.code != constants.AuthVerifyResultCodes.success:
+        return api_response.client_error("Permission Denied. Code: {}, Message: {}".format(auth_verify_result.code, auth_verify_result.message))
+
+    auth_result_data = auth_verify_result.data
+    access_token = auth_result_data['access_token']
+    refresh_token = auth_result_data['refresh_token']
+    expires_in = auth_result_data['expires_in']
+
+    user = outlook_service.get_me(access_token)
+    user_email = None
+    if 'mail' in user and user['mail'] and re.match(r"[^@]+@[^@]+\.[^@]+", user['mail']):
+        user_email = user['mail']
+    if 'userPrincipalName' in user and user['userPrincipalName'] and re.match(r"[^@]+@[^@]+\.[^@]+", user['userPrincipalName']):
+        user_email = user['userPrincipalName']
+    if not user_email:
+        return api_response.internal_error("Cannot determine user email. Auth result: {}".format(auth_result_data))
+
+    # TODO: Trigger email processor to refresh email
+
+    response_data = {
+        'message': 'Outlook OAuth success',
+        'access_token': access_token,
+        'user_email': user_email,
+        'refresh_token': refresh_token,
+        'expires_in': expires_in
+    }
+
+    return api_response.ok(response_data)
 
 
 def login(event, context):
@@ -59,58 +106,6 @@ def load_transactions(event, context):
         'count': response['Count'],
         'data': data
     })
-
-
-def close_transaction(event, context):
-    # Auth
-    if 'headers' not in event or event['headers'] is None \
-            or 'Authorization' not in event['headers'] or not event['headers']['Authorization']:
-        return api_response.client_error("No 'Authorization' set in request headers")
-
-    token = event['headers']['Authorization']
-    auth_verify_result = Authorizer.verify_token(token=token)
-    if not auth_verify_result:
-        return api_response.internal_error("An error occurred when verifying token. Failed to retrieve auth verification result")
-    elif auth_verify_result.code != constants.AuthVerifyResultCodes.success:
-        return api_response.client_error("Permission Denied. Code: {}, Message: {}".format(auth_verify_result.code, auth_verify_result.message))
-    # Auth Complete
-
-    payload = auth_verify_result.data
-    if not payload or 'login_email' not in payload or not payload['login_email']:
-        return api_response.client_error("'login_email' is missing from the token")
-    login_email = payload['login_email']
-
-    if 'pathParameters' not in event or not event['pathParameters'] or 'transactionId' not in event['pathParameters'] \
-            or event['pathParameters']['transactionId']:
-        return api_response.client_error("No 'transactionId' set in path parameters")
-    transaction_id = event['pathParameters']['transactionId']
-
-    try:
-        response = transactions_table.get_item(
-            Key={
-                "TransactionId": transaction_id
-            }
-        )
-    except ClientError as e:
-        return api_response.internal_error(e.response['Error']['Message'])
-    else:
-        item = response['Item']
-        status = item['Status']
-        if item['ReceiverEmail'] != login_email:
-            return api_response.client_error("Permission denied")
-        if status == "suspended":
-            return api_response.client_error("The transaction is in suspended status and cannot be closed.")
-        elif status != "closed":
-            transactions_table.update_item(
-                Key={
-                    'TransactionId': transaction_id
-                },
-                UpdateExpression="set Status = :s",
-                ExpressionAttributeValues={
-                    ':s': "closed",
-                }
-            )
-    return api_response.ok_no_data("Transaction closed")
 
 
 def auth_non_login_event(event):
